<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_view"
    android:background="@color/md_theme_light_onBackground"
    app:layoutDescription="@xml/activity_main_scene">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="#1C262F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/profile_pic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/ramad"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container" />

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container" />

    <ImageView
        android:id="@+id/ic_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_setting"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container" />

    <ImageView
        android:id="@+id/ic_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_call"
        app:layout_constraintEnd_toEndOf="@id/ic_setting"
        app:layout_constraintTop_toTopOf="@id/container" />
    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_name"
        android:textColor="#ECE8E8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/profile_status"
        app:layout_constraintStart_toStartOf="@id/container" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/status"
        android:textColor="@color/md_theme_dark_onSurfaceVariant"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/profile_name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="294dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="@+id/container"
        android:backgroundTint="@color/md_theme_dark_tertiary"
        app:tint="@null"
        app:layout_constraintTop_toBottomOf="@id/container"
        app:srcCompat="@drawable/ic_message" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container">

        <LinearLayout
            android:id="@+id/body_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_theme_dark_secondary"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textColor="@color/md_theme_light_tertiary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextStyleSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_20_1154272490" />

                    <TextView
                        style="@style/TextStyleHint"
                        android:text="@string/mobile" />

                    <com.google.android.material.divider.MaterialDivider style="@style/dividerStyle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextStyleSubtitle"
                            android:text="@string/user_name" />

                        <TextView
                            style="@style/TextStyleHint"
                            android:text="@string/username" />

                        <com.google.android.material.divider.MaterialDivider style="@style/dividerStyle" />

                        <TextView
                            style="@style/TextStyleSubtitle"
                            android:text="@string/android_dev" />

                        <TextView
                            style="@style/TextStyleHint"
                            android:text="@string/bio" />


                        <com.google.android.material.divider.MaterialDivider style="@style/dividerStyle" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextStyleSubtitle"
                                android:text="@string/notifications" />

                            <TextView
                                style="@style/TextStyleHint"
                                android:text="@string/notifications_on" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/md_theme_dark_secondary"
                android:orientation="vertical">

                <TextView
                    style="@style/TextStyleTitle"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/media" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ramdan" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ramdan" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ramdan" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>
